@@ -58,6 +58,7 @@
     <Compile Include="Entities\Player\Spells\AllSpells\StickManRangedSpell.cs" />
     <Compile Include="Entities\Physics\MovingEntity.cs" />
     <Compile Include="Entities\Player\Spells\Projectile.cs" />
+    <Compile Include="ClientCommand.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
