@@ -1,5 +1,10 @@
 2013-06-06  Jesse  <jesse.emond@hotmail.com>
 
+	* GREATLib.csproj:
+	* ClientCommand.cs: 
+
+2013-06-06  Jesse  <jesse.emond@hotmail.com>
+
 	* Rect.cs: 
 
 2013-06-06  Jesse  <jesse.emond@hotmail.com>
