@@ -1,5 +1,13 @@
 2013-06-06  Jesse  <jesse.emond@hotmail.com>
 
+	* Game1.cs:
+	* Client.cs:
+	* GREATClient.Linux.csproj:
+	* GameplayScreen.cs:
+	* GREATClient.Windows.csproj: 
+
+2013-06-06  Jesse  <jesse.emond@hotmail.com>
+
 	* Drawable.cs: 
 
 2013-06-06  Jesse  <jesse.emond@hotmail.com>
